# OOP

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
Laba_1/: CMakeLists.txt  Makefile  main.cpp
Laba_1/include/: ogres.h
Laba_1/src/: ogres.cpp
Laba_1/tests/: tests01.cpp
